[tool.poetry]
name = "pay-with-crypto"
version = "0.1.0"
description = ""
authors = ["kirillketrik <kirillketrik34@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.11.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
